--- a/README.rdoc
+++ b/README.rdoc
@@ -18,5 +18,8 @@ install jruby 1.4.0
    or 
  % jruby -e "ENV['RSPEC']='true'; ENV['AUTOTEST']='true'; system('jruby -S autotest', *ARGV)"
 
+** demo
+Rubyist Social Graph : http://rubyist-sg.appspot.com/ is running with GAE/JRuby+Rails2.3.5+TinyDS.
+
 ** author
-  takeru : sasaki.takeru@gmail.com, twitter:@urekat (almost japanese!)
+  takeru : sasaki.takeru@gmail.com, twitter:@urekat (almost japanese!), blog:http://d.hatena.ne.jp/urekat
